// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the CardWrapper component should accept a backgroundColor 1`] = `
.c0 {
  background: salmon;
  border-radius: 5px;
  box-shadow: 0 10px 9px -4px rgba(0,0,0,.07);
  margin: 0.75rem 1rem;
}

<div
  className="c0"
>
  Boom!
</div>
`;

exports[`the CardWrapper component should accept additional props 1`] = `
.c0 {
  background: #FFFFFF;
  border-radius: 5px;
  box-shadow: 0 10px 9px -4px rgba(0,0,0,.07);
  margin: 0.75rem 1rem;
}

<div
  className="c0"
  role="article listitem"
>
  Boom!
</div>
`;

exports[`the CardWrapper component should accept and render passed in styles 1`] = `
.c0 {
  background: #FFFFFF;
  border-radius: 5px;
  box-shadow: 0 10px 9px -4px rgba(0,0,0,.07);
  margin: 0.75rem 1rem;
}

<div
  className="c0"
  style={
    Object {
      "paddingTop": "56.25%",
      "width": "100%",
    }
  }
>
  Boom!
</div>
`;

exports[`the CardWrapper component should render 1`] = `
.c0 {
  background: #FFFFFF;
  border-radius: 5px;
  box-shadow: 0 10px 9px -4px rgba(0,0,0,.07);
  margin: 0.75rem 1rem;
}

<div
  className="c0"
>
  Boom!
</div>
`;
